--- a/project/package.json
+++ b/project/package.json
@@ -1,13 +1,20 @@
 {
+   "homepage": "https://Shwetk25.github.io/ToDoList",
+
+
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+ "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+}
+
   },
   "dependencies": {
     "date-fns": "^2.30.0",
